# lightpool-sdk-rust

./: .gitignore  Cargo.toml  README.md
examples/: burst_client.rs  burst_spot_client.rs  simple_client.rs  simple_perp_client.rs  simple_spark_client.rs  simple_spot_client.rs  ws_block.rs  ws_trades.rs  ws_user.rs
src/: client.rs  crypto.rs  error.rs  info_client.rs  lib.rs  perp_events.rs  spark_events.rs  spot_events.rs  token_events.rs  transaction.rs  types.rs
src/lightpool_types/: address_type.rs  block.rs  call.rs  contract.rs  crypto.rs  effects.rs  mod.rs  module.rs  name_type.rs  object.rs  order_id.rs  order_id_type.rs  perp_actions.rs  spark_actions.rs  spot_actions.rs  spot_helpers.rs  token_actions.rs  token_helpers.rs  transaction.rs
src/ws/: message.rs
tests/: integration_test.rs
