[package]
name = "lightpool-sdk"
version = "0.1.0"
authors = ["xiaoyu1998 (with AI assistance)"]
edition = "2021"
description = "SDK for LightPool blockchain"

[features]
default = ["serde", "randomization", "serialization"]
serde = ["dep:serde"]
randomization = ["rand"]
serialization = ["bincode"]

[dependencies]
# Async and network
tokio = { version = "1.5.0", features = ["rt", "net", "sync", "macros", "time", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
futures = "0.3.14"
futures-util = "0.3.14"
async-trait = "0.1.50"
reqwest = { version = "0.11", features = ["json"] }
bytes = "1.0"

# WebSocket support
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"

# CLI and logging (for examples)
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0.61"
bincode = { version = "1.3.3", optional = true }
indexmap = "2"

# Error handling
anyhow = "1.0.38"
thiserror = "1.0.21"

# Crypto and encoding
hex = "0.4.3"
base64 = "0.13.0"
rand = { version = "0.7.3", optional = true }

# Crypto dependencies for internal lightpool_types
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
alloy-primitives = { version = "0.4", features = ["serde"] }

# Utilities
compact_str = { version = "0.7", features = ["serde"] }
log = "0.4.14"
tracing = "0.1.37"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.2.0" 